# ELEC5550_Group08_GITHUB

./: README.md
ERROR_CORRECTION/: README.md
ESP32 PROTOTYPING/: README.md
ESP32 PROTOTYPING/ARCHIVE/: README.md
ESP32 PROTOTYPING/laserrxfilesaving/: laserrxfilesaving.ino
ESP32 PROTOTYPING/laserrxwroomspiffs/: laserrxwroomspiffs.ino
ESP32 PROTOTYPING/lasertxfilesaving/: lasertxfilesaving.ino
ESP32 PROTOTYPING/lasertxtest/: lasertxtest.ino
ESP32 PROTOTYPING/lasertxwroomspiffs/: lasertxwroomspiffs.ino
ESP32 PROTOTYPING/lasertxwroomspiffs2/: lasertxwroomspiffs2.ino
FINALISED/: README.md
HANDSHAKE/: README.md  handshake_receive.ino  handshake_send.ino
HID/: HID_device_v8_TBD  HIDhid_device_v5_LED  README.md  hid_device_fixed.txt  hid_device_v1_no_test.c  hid_device_v2.c  hid_device_v3.c  hid_device_v4.c  hid_device_v5.c  hid_device_v6.c  hid_device_v7.c  hid_device_v8.c  hid_device_v9.c  hid_device_v9_LED.c  hid_host_example.c  hid_host_v2.c  hid_host_v5.c  hid_host_v6.c  hid_host_v7.c  hid_keyboard_test.c  hid_mouse_serial.c  tusb_hid_example_main.c
HID/ARCHIVE/: HIDDecoding_V01  HIDEncoding_V01  hid_v1.c  (+12 more)
MSC/: README.md  USB Examples  dev_main.c  dev_main_V2  host_main.c  host_main_V2
MSC/ARCHIVE/usb_rx_V2/: CMakeLists.txt
MSC/dev_main_V9/: CMakeLists.txt  README.md  c_cpp_properties.json  tusb_msc_main.c
PCB PROTOTYPING/: ESP32-S3-DevKitC-1.kicad_pcb  ESP32-S3-DevKitC-1.kicad_prl  ESP32-S3-DevKitC-1.kicad_pro  README.md
PROTOTYPING/: README.md
USB/: README.md
VIRTUAL_STORAGE/: README.md
main/: SimplifiedHIDHost  hid_host_example.c
(+152 files in other folders)
